# android_cpp

./: .gitignore  note.md  package.json  re-android.sh
cordova/: build.sh  config.xml  dev.sh  dist.sh  package-lock.json  package.json
cordova/FreeGo/: plugin.xml
cordova/FreeGo/src/android/: CMakeLists.txt  build.gradle
cordova/FreeGo/src/android/cpp/: common.cpp  cpp_net.h  ws_svr.cpp
cordova/plugins/: android.json  fetch.json
cordova/plugins/cordova-plugin-androidx/: package.json
cordova/plugins/cordova-plugin-androidx-adapter/: package.json
cordova/plugins/cordova-plugin-device/: package.json
cordova/plugins/cordova-plugin-dialogs/: package.json
cordova/plugins/cordova-plugin-file/: package.json
cordova/plugins/cordova-plugin-media/: package.json
cordova/plugins/cordova-plugin-media-capture/: package.json
cordova/plugins/cordova-plugin-networkinterface/: package.json
cordova/plugins/cordova-plugin-whitelist/: package.json
cordova/plugins/novice.cpp.httpserver/: plugin.xml
cordova/plugins/novice.cpp.httpserver/src/android/: CMakeLists.txt  build.gradle
cordova/plugins/novice.cpp.httpserver/src/android/cpp/: common.cpp  common.h  cpp_net.cpp  cpp_net.h  db.cpp  db.h  evt_sys.cpp  home_cnn.cpp  home_cnn.h  http_home.cpp  http_home.h  http_svr.cpp  http_svr.h  peer.cpp  peer.h  peer_handler.cpp  peer_handler.h  socks.h  tunnel.cpp  udp.cpp  udp.h  util.cpp  util.h  ws_svr.cpp  ws_svr.h
cordova/plugins/novice.cpp.httpserver/src/android/java/: CppSvr.java  ForegroundService.java  RealFilePathUtil.java
cordova/py-plugin/: package.json  plugin.xml
cordova/py-plugin/src/android/: CMakeLists.txt  build.gradle  plugin.gradle
cordova/py-plugin/src/android/cpp/: common.cpp  common.h  cpp_net.cpp  cpp_net.h  cpp_net.i  db.h  evt_sys.h  http_home.h  http_svr.cpp  http_svr.h  peer.cpp  peer.h  socks.h  tunnel.cpp  tunnel.h  udp.cpp  udp.h  util.cpp  util.h  ws_svr.cpp  ws_svr.h
cordova/py-plugin/src/android/java/: CppSvr.java  ForegroundService.java  RealFilePathUtil.java  Scanner.java
cordova/res/values-zh-rCN/: strings.xml
cordova/res/xml/: provider_paths.xml
spa/: package-lock.json  package.json  vue.config.js
spa/public/: index.html
spa/src/: App.vue  db.js  main.js  router.js  ws.js
spa/src/components/: ResMgr.vue
spa/src/views/: Home.vue
ui/: .gitignore  package-lock.json  package.json  vue.config.js
ui/public/: api.txt  index.html  manifest.json  proxy.pac  service.html
ui/src/: App.vue  Pub.vue  db.js  main.js  router.js  router_pub.js  ws.js  ws_tunnel.js  wss.js
ui/src/assets/: common.css  font.css  ol.css  progressbar.css
ui/src/common/: busi.js  config.js  cordova.js  face.js  file_transfer.js  gen_img.js  md5.js  peer_dealer.js  rt_stream.js  util.js
ui/src/components/: ChatAudio.vue  ChatImage.vue  ChatOthers.vue  ChatStream.vue  ChatText.vue  ChatVideo.vue  ChatWorld.vue
ui/src/locales/: en.json  zh.json
ui/src/public/views/: Browse.vue  UpHome.vue  Upload.vue
ui/src/service/: App.vue
ui/src/views/: Help.vue  Help_en.vue  Home.vue  Intranet.vue  My.vue  Outer.vue  Peer.vue  PeerChat.vue  Store.vue
ui/src/views/fs/: All.vue  Audio.vue  Folder.vue  Image.vue  MultiSel.vue  Video.vue
ui/src/views/my/: Blacklist.vue  Friends.vue  Settings.vue
ui/src/views/peer/: Connected.vue  Home.vue  Nearby.vue  Socks.vue  Sss.vue  World.vue
